#
#  FRacing/lib/configuration/Makefile.am
#
#  Copyright (C) 2015 Ikhyun Kim.
#
# This file is placed under the GPL.  Please see the file
# COPYING for more details.
#
#

lib_LTLIBRARIES = libfrconfiguration.la
libfrconfiguration_la_CXXFLAGS = -I$(top_srcdir)/lib/utillity
libfrconfiguration_la_SOURCES = ConfigItem.cpp ConfigSection.cpp Configuration.cpp

